--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
-body {
-  overflow-x: hidden;
-  font-family: futura;
-}
+/**
+Auteur : Stenger Nicolas
+*/
 
+body {
+    overflow-x: hidden;
+    font-family: futura;
+}
 .containerHomePages {
   width: 1440px;
   height: 826px;
@@ -40,7 +43,9 @@ h1 {
   margin-top: 384px;
   margin-left: 600px;
 }
-
+.reserverr:focus {
+  outline: none;
+}
 .scrollContainer {
   width: 1px;
   height: 50px;
@@ -149,6 +154,7 @@ h1 {
 
 .decouvrir {
   border: 2px black solid;
+  font-family: futura;
   font-size: 25px;
   text-align: center;
   background: white;
@@ -157,7 +163,9 @@ h1 {
   margin-top: 50px;
   box-shadow: 1px 1px 1px 1px #888888;
 }
-
+.decouvrir:focus {
+  outline: none;
+}
 .reserver {
   position: absolute;
   transform: rotate(-90deg);
@@ -188,8 +196,11 @@ h1 {
   margin-left: 566px;
   margin-top: 560px;
   box-shadow: 1px 1px 1px 1px #888888;
+  font-family: futura;
+  }
+.table:focus {
+  outline: none;
 }
-
 .bitmap {
   margin-left: 480px;
   margin-top: 120px;
@@ -198,7 +209,7 @@ h1 {
 
 .egal {
   position: absolute;
-  margin-top: 900px;
+  margin-top: 908px;
   margin-left: 1350px;
   border-bottom: 3px darkred solid;
   font-size: 40px;
@@ -249,6 +260,7 @@ h1 {
   font-style: italic;
   border-top: 1px solid white;
   padding-top: 100px;
+  margin-top: 120px;
 }
 
 .un {
@@ -261,7 +273,38 @@ h1 {
   font-size: 40px;
   margin-top: 127px;
 }
-
+.un:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.deux:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.trois:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.quatre:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.cinq:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.six:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.sept:focus {
+  outline: none;
+  background-color: #FB3640;
+}
+.huit:focus {
+  outline: none;
+  background-color: #FB3640;
+}
 .deux {
   border-top: 2px lightgrey solid;
   border-left: 2px lightgrey solid;
@@ -298,6 +341,7 @@ h1 {
   padding: 5px 20px 5px 18px;
   margin-left: 570px;
   font-size: 40px;
+
 }
 
 .six {
@@ -327,14 +371,14 @@ h1 {
 .phrase {
   margin-top: 40px;
   text-align: center;
-  padding-bottom: 248px;
+  padding-bottom: 210px;
   color: grey;
 }
 
 .egaldeux {
   position: absolute;
-  margin-top: -345px;
   margin-left: 1350px;
+  margin-top: -307px;
   border-bottom: 3px darkred solid;
   font-size: 40px;
   padding-left: 30px;
@@ -350,7 +394,7 @@ h1 {
   padding-left: 16px;
   padding-top: 75px;
   padding-bottom: 50px;
-  margin-top: 204px;
+  margin-top: 264px;
 }
 
 .zerotroistrois {
@@ -358,17 +402,18 @@ h1 {
   color: black;
   font-size: 20px;
   margin-left: 56px;
-  margin-top: 350px;
+  margin-top: 410px;
 }
 
 .choisir {
-  text-align: center;
+  margin-left: 560px;
   font-size: 30px;
-  margin-top: 180px;
+  padding-top: 60px;
+  font-family: futura;
 }
 
 .egaltrois {
-  position: absolute;
+  position: absolute fixed;
   margin-left: 1350px;
   margin-top: 178px;
   border-bottom: 3px darkred solid;
@@ -380,7 +425,7 @@ h1 {
 .horaire {
   font-size: 20px;
   margin-left: 521px;
-  margin-top: 200px;
+  margin-top: 0px;
 }
 
 .heure {
@@ -388,29 +433,33 @@ h1 {
   margin-left: 110px;
   margin-top: -17px;
   margin-bottom: 200px;
+  font-family: futura;
 }
-
+.heure:focus {
+  outline: none;
+}
 .date {
   width: 200px;
-  margin-left: 620px;
+  margin-left: 580px;
   margin-top: 50px;
   font-size: 20px;
+  font-family: futura;
 }
-
+.date:focus {
+  outline: none;
+}
 .footer {
   display: block;
   height: 414px;
   width: 100%;
   background-color: #323232;
-  margin-top: 240px;
+  margin-top: 180px;
 }
-
 .pfooter {
   text-align: center;
   line-height: 26px;
   color: white;
 }
-
 .pfooter1 {
   padding-top: 40px;
   padding-bottom: 30px;
@@ -425,35 +474,30 @@ h1 {
   margin-left: 102px;
   padding-top: 77px;
 }
-
 .adresse {
   padding-top: 120px;
   position: absolute;
   color: white;
   margin-left: 102px;
 }
-
 .contact {
   position: absolute;
   color: white;
   margin-left: 102px;
   padding-top: 240px;
 }
-
 .tel {
   padding-top: 300px;
   position: absolute;
   color: white;
   margin-left: 102px;
 }
-
 .join {
   position: absolute;
   color: white;
   margin-left: 1100px;
   margin-top: -100px;
 }
-
 .instagram {
   position: absolute;
   height: 30px;
@@ -461,7 +505,6 @@ h1 {
   margin-left: 598px;
   margin-top: 80px;
 }
-
 .twitter {
   position: absolute;
   height: 30px;
@@ -469,7 +512,6 @@ h1 {
   margin-left: 809px;
   margin-top: 80px;
 }
-
 .facebook {
   position: absolute;
   height: 30px;
@@ -477,38 +519,84 @@ h1 {
   margin-left: 704px;
   margin-top: 80px;
 }
-
 .layout {
-  display: none;
-  background-color: grey;
-  opacity: 80%;
+  background-image: url();
+  background-color: rgba(255, 255, 255, 0.5);
   width: 100%;
   height: 100%;
+  display: none;
+  list-style: none;
 }
-
 .nom {
-  font-size: 24px;
+  position: absolute;
+  font-size: 16px;
   width: 20%;
-  margin-left: 520px;
+  margin-left: 320px;
+  margin-top: 100px;
+  font-family: futura;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
-
+.nom:focus {
+  outline: none;
+}
 .prenom {
-  font-size: 24px;
+  position: absolute;
+  font-size: 16px;
   width: 20%;
-  margin-left: 520px;
-  margin-top: 20px;
+  margin-left: 820px;
+  margin-top: 100px;
+  font-family: futura;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
-
+.prenom:focus {
+  outline: none;
+}
 .numtel {
-  font-size: 24px;
+  position: absolute;
+  font-size: 16px;
   width: 20%;
-  margin-left: 520px;
-  margin-top: 20px;
+  margin-left: 320px;
+  margin-top: 220px;
+  font-family: futura;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
-
+.numtel:focus {
+  outline: none;
+}
 .mail {
-  font-size: 24px;
+  position: absolute;
+  font-size: 16px;
   width: 20%;
-  margin-left: 520px;
-  margin-top: 20px;
+  margin-left: 820px;
+  margin-top: 220px;
+  font-family: futura;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+.mail:focus {
+  outline: none;
+}
+.envoyer {
+  font-size: 20px;
+  width: 10%;
+  text-align: center;
+  margin-left: 640px;
+  font-family: futura;
+}
+.valider {
+  font-size: 20px;
+  width: 10%;
+  text-align: center;
+  margin-left: 640px;
+  margin-top: 400px;
+  font-family: futura;
+}
+.cinqpart {
+  display: none;
+}
+.unhoraire {
+  font-family: futura;
 }
